--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "basic",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mthorrell.github.io/",
+  "homepage": "https://mthorrell.github.io/Face-Ventura-Pet-Detector-react-app",
   "dependencies": {
     "@tensorflow/tfjs": "^1.7.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,6 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
