--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "blueimp-load-image": "^3.0.0",
+    "bootstrap": "^4.4.1",
     "d3": "^5.15.1",
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.5.0",
     "list-react-files": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-share": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
